--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,9 +1,10 @@
-.navbar-brand{
+.container-fluid{
     font-size: 30px;
     color: white;
     padding: 10px;
-    font-family: 'Syne Mono', monospace;
-    /* font-family: 'Ubuntu', sans-serif; */
+    /* font-family: 'Syne Mono', monospace; */
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 600;
 }
 
 .back{
@@ -18,37 +19,37 @@
     justify-content: center;
 }
 .back2{
-    width: 800px;
+    width: 100%;
     background: url("https://wallpaperaccess.com/full/1129027.jpg");
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
 
 .navbar-brand:hover{
     color: white;
 }
 
 img{
-    height: 50px;
-    width: 50px;
+    height: 30px;
     margin-right: 10px;
 }
 
 
 
 .btn{
-    width: 500px;
+    width: 400px;
     padding: 20px;
     margin: 15px;
     font-size: 35px;
     background-color: black;
-    border: 5px solid lightcoral;
+    border: 5px solid #512da8;
     border-radius: 25px;
     font-family: 'Ubuntu', sans-serif;
-    /* font-family: 'Syne Mono', monospace; */
+    font-family: 'Syne Mono', monospace;
 }
 
 .btn:hover{
-    background-color: lightcoral;
+    background-color: #512da8;
     color: white;
     border: 5px solid black;
     font-weight: 600;
@@ -56,4 +57,18 @@ img{
 }
 
 
+.backk{
+    position: absolute;
+    width: 100px;
+    padding: 10px;
+}
 
+
+@media only screen and (max-width:1045px){
+    .container-fluid{
+        font-size: 25px;
+    }
+    img{
+        height: 20px;
+    }
+}
