--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -7,6 +7,23 @@
     font-weight: 600;
 }
 
+.transButton{
+    width: 200px;
+    padding: 10px;
+    margin: 15px;
+    font-size: 15px;
+    background-color: black;
+    border: 5px solid #512da8;
+    border-radius: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Syne Mono', monospace;
+}
+.transButton:hover{
+    background-color: #512da8;
+    color: white;
+    font-weight: 600;
+}
+
 .back{
     /* background-color: yellow; */
     background: url("https://img.freepik.com/premium-photo/black-stone-texture-dark-slate-background-top-view_88281-1206.jpg?w=2000");
@@ -20,8 +37,8 @@
 }
 .back2{
     width: 100%;
-    background: url("https://wallpaperaccess.com/full/1129027.jpg");
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    background: #111827;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
 }
 
 
