--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -7,21 +7,24 @@
     font-weight: 600;
 }
 
-.transButton{
+.nav-item{
+    margin-left:100% ;
+    font-size: 20px;
     width: 200px;
-    padding: 10px;
-    margin: 15px;
-    font-size: 15px;
-    background-color: black;
+    margin-left: 100px;
+    background-color:#212529;
     border: 5px solid #512da8;
     border-radius: 25px;
-    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
     font-family: 'Syne Mono', monospace;
 }
-.transButton:hover{
+
+.nav-item:hover{
     background-color: #512da8;
     color: white;
+    border: 5px solid #212529;
     font-weight: 600;
+    transition: 0.2s ease-in;
 }
 
 .back{
@@ -38,8 +41,11 @@
 .back2{
     width: 100%;
     background: #111827;
+    /* background: url("https://wallpaperaccess.com/full/1129027.jpg"); */
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
 }
+
+
 
 
 .navbar-brand:hover{
@@ -48,7 +54,7 @@
 
 img{
     height: 30px;
-    margin-right: 10px;
+    margin-right: auto;
 }
 
 
@@ -61,9 +67,11 @@ img{
     background-color: black;
     border: 5px solid #512da8;
     border-radius: 25px;
-    font-family: 'Ubuntu', sans-serif;
+    /* font-family: 'Ubuntu', sans-serif; */
     font-family: 'Syne Mono', monospace;
 }
+
+
 
 .btn:hover{
     background-color: #512da8;
@@ -71,6 +79,23 @@ img{
     border: 5px solid black;
     font-weight: 600;
     transition: 0.2s ease-in;
+}
+
+.transButton{
+    width: 300px;
+    padding: 10px;
+    margin: 15px;
+    font-size: 20px;
+    background-color: #212529;
+    border: 5px solid #512da8;
+    border-radius: 25px;
+    /* font-family: 'Ubuntu', sans-serif; */
+    font-family: 'Syne Mono', monospace;
+}
+
+.transButton:hover{
+    background-color: #512da8;
+    font-weight: 600;
 }
 
 
