--- a/src/Components/LoginForm.css
+++ b/src/Components/LoginForm.css
@@ -1,9 +1,11 @@
 .row{
-    margin-right: 0px;
+    margin: 20px;
     color: white;
     font-size: 20px;
     /* background-color: grey; */
-    background: url("https://wallpaperaccess.com/full/1129027.jpg");
+    /* background: url("https://wallpaperaccess.com/full/1129027.jpg"); */
+    /* background: black; */
+    background: #1f2937;
     padding: 50px;
     width: 800px;
     border-radius: 50px;
@@ -17,7 +19,8 @@
 }
 
 .background{
-    background: url("https://wallpaperaccess.com/full/1129027.jpg");
+    background: #111827;
+    /* background: url("https://wallpaperaccess.com/full/1129027.jpg"); */
     /* background: url("https://img.freepik.com/premium-photo/black-stone-texture-dark-slate-background-top-view_88281-1206.jpg?w=2000"); */
 }
 
@@ -28,7 +31,7 @@ label{
 
 .form-control, .agee{
     font-size: 20px;
-    border:5px solid black;
+    /* border:5px solid black; */
     font-weight: 400;
     margin-bottom: 30px;
     background-color: white;
@@ -45,7 +48,9 @@ label{
 
 .agee{
     font-size: 20px;
-    border:5px solid black;
+    color: black;
+    /* border:5px solid black; */
+    border-radius: 10px;
     font-weight: 400;
     margin: 0px 10px 0px 0px;
     width: 200px;
@@ -54,7 +59,7 @@ label{
 
 .form-select{
     font-size: 20px;
-    border:5px solid black;
+    /* border:5px solid black; */
     font-weight: 400;
     margin: 0px 10px 30px 10px;
 }
