--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Syne+Mono&family=Ubuntu:wght@400;500;700&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
 .container-fluid{
     font-size: 30px;
     margin-left: 0px;
     color: white;
-    padding: 10px;
     /* font-family: 'Syne Mono', monospace; */
     font-family: 'Ubuntu', sans-serif;
     font-weight: 600;
+}
+
+.team-margin{
+    margin-top: -50px;
 }
 
 .nav-item{
@@ -34,25 +42,24 @@
 }
 
 .back{
-    /* background-color: yellow; */
-    background: url("https://img.freepik.com/premium-photo/black-stone-texture-dark-slate-background-top-view_88281-1206.jpg?w=2000");
-    background-size: cover;
-    /* background-color: yellow; */
     background-size: cover;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+
+
 .back2{
     width: 100%;
     background: #111827;
-    /* background: url("https://wallpaperaccess.com/full/1129027.jpg"); */
-    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
 }
 
 
-
+.navbar-brand{
+    font-size: 25px;
+}
 
 .navbar-brand:hover{
     color: white;
@@ -84,9 +91,14 @@ img{
     color: white;
     border: 5px solid #111827;
     font-weight: 600;
-    transition: 0.2s ease-in;
+    transform: scale(1.05);
+    transition: 0.1s ease-in;
 }
 
+footer .footer-edit{
+    font-size: 50px;
+
+}
 
 .transButton{
     width: 250px;
@@ -116,6 +128,7 @@ img{
 .backk{
     position: absolute;
     width: 100px;
+    background-color: white;
     padding: 10px;
 }
 
